Top is no longer fixed on small devices coz space is too precious.

--- a/css/main.css
+++ b/css/main.css
@@ -89,13 +89,16 @@ footer {
     background: -webkit-linear-gradient(top, white 0%, white 65%, #eeeeee 100%);
     background: linear-gradient(to bottom, white 0%, white 65%, #eeeeee 100%);
     overflow: hidden; }
+  @media only screen and (max-width: 30.71429em) {
+    #top {
+      position: relative; } }
 
 /* ===Main section=== */
 #main {
   margin-top: 6.42857em; }
   @media only screen and (max-width: 30.71429em) {
     #main {
-      margin-top: 10em; } }
+      margin-top: 1.42857em; } }
 
 #content {
   background: rgba(40, 40, 40, 0.1); }
