--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,6 +24,12 @@
 		@include background(linear-gradient(top, #fff 0%,#fff 65%,#eee 100%));
 		overflow: hidden;
 	}
+
+	// User shouldnt have a permament top on mobile devices, space is precious there
+	@media only screen and (max-width: em(430, $default-font-size)) {
+		position: relative;
+
+	}
 }
 
 /* ===Main section=== */
@@ -31,12 +37,9 @@
 #main {
 	margin-top: em(90, $default-font-size);
 	
-	// The navigation is too long to be on one row with the branding on small devices
-	// so it will break and the place required for the top is much bigger
-	// and therefore the padding has to be more
-	// we dont respond to very small devices that even have no place for the whole navigation
+	// Because the navigation is no longer fixed we no longer need the huge margin
 	@media only screen and (max-width: em(430, $default-font-size)) {
-		margin-top: em(140, $default-font-size);		
+		margin-top: $default-margin;		
 	}
 }
 
